# jobsync

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg
docs/: CheatSheet.sql  Cheatsheet.sql  CreateTables.sql  OPERATOR_GUIDE.md  USAGE_GUIDE.md
src/jobsync/: __init__.py  client.py  config.py  schema.py  sync.py
src/syncman/: config.py  config.yml  db.py  delay.py  model.py  schema.py  schema1.py  sync.py
test/: config-sa.yml  conftest.py  conftest_sqa.py  database.db  sql  test.py  test_sync.py
tests/: config.py  conftest.py  fixtures.py  test_callbacks.py  test_client.py  test_cluster.py  test_concurrent.py  test_coordination.py  test_coordination_unit.py  test_database_structure.py  test_edge_cases.py  test_event_bus.py  test_integration.py  test_lock_management.py  test_locks.py  test_minimal_move.py  test_rebalance_event.py  test_robustness.py  test_state_machine.py  test_sync.py  test_task.py  test_timezone.py  test_timezone_handling.py  test_unit.py
