[tool.poetry]
name = "jobsync"
version = "1.1.0"
description = "Simple Sync Manager"
authors = ["bissli <bissli@xyz.com>"]

[tool.poetry.dependencies]
python = "~3.11"

more-itertools = "*"

libb-util = { git = "https://github.com/bissli/libb-util" }
libb-date = { git = "https://github.com/bissli/libb-date" }
libb-db = { git = "https://github.com/bissli/libb-db" }

# == test
asserts = { version = "*", optional = true }
docker = { version = "*", optional = true }
pytest = { version = "*", optional = true }
pytest-mock = { version = "*", optional = true }
pytest-runner = { version = "*", optional = true }
pdbpp = { git = "https://github.com/pdbpp/pdbpp", optional = true }
wrapt = { version = "*", optional = true }

[tool.poetry.extras]
test = [
  "asserts",
  "docker",
  "pdbpp",
  "pytest",
  "pytest-mock",
  "pytest-runner",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
