[tool.poetry]
name = "jobsync"
version = "1.3.2"
description = "Simple Sync Manager"
authors = ["bissli <bissli@xyz.com>"]

[tool.poetry.dependencies]
python = "^3.10"

more-itertools = "*"

psycopg = { extras = ["binary"], version = "3.2.10" }
sqlalchemy = "^2.0.0"

# == test
docker = { version = "*", optional = true }
pytest = { version = "*", optional = true }
pytest-mock = { version = "*", optional = true }
pytest-runner = { version = "*", optional = true }
wrapt = { version = "*", optional = true }

[tool.poetry.extras]
test = [
  "docker",
  "pytest",
  "pytest-mock",
  "pytest-runner",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
